# minecraft-mod-manager-rs

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  main.rs  mc_fabric.rs  mc_forge.rs  mod_info.rs
src/components/: Loading.vue  Modal.vue
src/components/install/: InstallForge.vue
src/components/main/: AvailableItem.vue  Content.vue  InstalledItem.vue  Item.vue  TopBar.vue
src/types/: FolderContentsEvent.ts  LoadingEvent.ts  ModFile.ts  ToastEvent.ts
